# silkDecoder

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/forever/silk_decoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SKP_Silk_SigProc_FIX.h  SKP_Silk_dec_API.c  SKP_Silk_define.h  SKP_Silk_pitch_est_tables.c  SKP_Silk_resampler_rom.h  SKP_Silk_structs.h  native-lib.cpp
app/src/main/java/com/forever/silk_decoder/: Decoder.java  MainActivity.java  Test.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/forever/silk_decoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
